# mkxfs

./: CMakeLists.txt  README.md  xplatform.h
dumpifs/: CMakeLists.txt  dumpifs.c
include/lib/: compat.h
include/sys/: image.h  platform.h  startup.h
mkifsf_opah/: mkifsf_opah.c
mkifsf_openbios/: mkifsf_openbios.c
mkifsf_srec/: mkifsf_srec.c
mkxfs/: CMakeLists.txt  crc32.c  mk_image_fsys.c  mkxfs.c  parse_file_attr.c  struct.h
